16904
I am not sure if this is a bug in Scala or in the Java library I use. I was trying to connect to couchdb using jcouchdb and Scala, so to reproduce the bug, you will need to have couchdb server up and running. Download the windows version of the server from here: 
https://github.com/downloads/dch/couchdb/setup-couchdb-1.1.1_js185_otp_R14B03+fix-win32-crypto.exe
Instructions here: http://wiki.apache.org/couchdb/Installing_on_Windows

All OS versions also available from here: http://www.couchbase.com/download

Once server is installed and running, download the library jars given in the source code below. Copy paste the source in REPL and there will be an error as described below

Source:
```
// download jcouchdb jar from http://code.google.com/p/jcouchdb/downloads/detail?name=jcouchdb-1.0.1-1.jar
// get all jars from http://jcouchdb.googlecode.com/svn/trunk/lib/compile/
// put all jars in SCALA_HOME/lib folder. Those jars will be available for import from REPL
// code copied from http://code.google.com/p/jcouchdb/wiki/Tutorial

import org.jcouchdb.db._

val db = new Database("localhost", "mycouchdb");
val server = db.getServer
server.createDatabase("mycouchdb")
```

REPL session:
```
scala> import org.jcouchdb.db._
import org.jcouchdb.db._

scala> val db = new Database("localhost", "mycouchdb");
db: org.jcouchdb.db.Database = org.jcouchdb.db.Database@3aabc1

scala> val server = db.getServer

scala> server.createDatabase("mycouchdb")
<console>:12: error: not found: value server
              server.createDatabase("mycouchdb")
              ^
scala>

scala> val server = db.getServer
server: org.jcouchdb.db.Server = org.jcouchdb.db.ServerImpl@1d48043

scala> server.createDatabase("mycouchdb")
res3: Boolean = false
```

server is not defined even after using the line above.
However, typing the line once again defines server.
This issue does not occur in Scala 2.8.
